# training-ai-engineer-1

./: .env.local  .gitignore  Makefile  README.md  RUN_LOCAL.md  docker-compose.yml  pyproject.toml  requirements.txt  run_lambda_test.py  template.yaml
src/: __init__.py  ingest_raw.py  lambda_function.py  opensearch_client.py
tests/: test_opensearch_client.py
