[tool.poetry]
name = "s3-opensearch-pipeline"
version = "0.1.0"
description = "Automated pipeline: S3 raw ingestion -> Lambda processing -> OpenSearch indexing"
authors = ["you <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "1.28.0"
requests = "2.31.0"
opensearch-py = "2.0.0"
numpy = {version = "^1.25", optional = true}
pandas = {version = "^2.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
ingest-raw = "src.ingest_raw:main"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.extras]
data = ["numpy", "pandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
